# vibe4vets

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MISSING_WEBSITES_INDEX.txt  MISSING_WEBSITES_SUMMARY.md  NATIVE_AMERICAN_VETERAN_SOURCES.md  Procfile  docker-compose.yml  financial_assistance_data_sources.md  manifest  missing_websites.csv  missing_websites_report.txt  missing_websites_summary.json  nixpacks.toml  package-lock.json  pyrightconfig.json  sample_missing_websites.txt  ssvf_ny_providers_enriched.json  ssvf_providers_output.json  start-dev.sh  start-prod.sh  tabz-profile.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
backend/.claude/commands/: scan-resources.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  17780412a17f_add_geog_auto_populate_trigger.py  6b4c55d1bb4a_merge_branches.py  74e602211084_add_safeguards_for_tags_length_and_.py  a3f8c2d1e456_add_eligibility_fields.py  b4e9d2f1g789_add_programs_table.py  c5f0e3g2h890_add_feedback_table.py  c5f9e3g2h890_add_embedding_column.py  d6f1e4g3h901_add_food_distribution_fields.py  d6g1f4h3i012_add_analytics_tables.py  d71df951e5d9_initial_schema.py  e4264f267274_add_search_vector_trigger.py  e48b646fd9f4_increase_varchar_limits.py  e7h2g5i4j123_add_benefits_fields.py  ebc114bc5743_add_zip_codes_table.py  f5375g268385_add_link_health_columns.py  f8i3h6j5k234_add_etl_job_runs_table.py  g6486h379496_change_embedding_dimension_384.py  h_rename_categories.py  i7597j480597_add_performance_indexes.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  taxonomy.py
backend/app/models/: __init__.py  analytics.py  feedback.py  location.py  organization.py  partner.py  program.py  resource.py  review.py  source.py
backend/connectors/: __init__.py  american_legion_posts.py  apprenticeship.py  base.py  boulder_crest.py  careeronestop.py  certifications.py  cohen_veterans_network.py  crawl4ai_discovery.py  cvso.py  dav_chapters.py  discharge_upgrade.py  faith_based.py  feeding_america.py  final_salute.py  fisher_house.py  gi_bill_schools.py  give_an_hour.py  gpd.py  headstrong.py  home_base.py  hrsa_health_centers.py  hud_vash.py  legal_aid.py  mental_health.py  military_onesource.py  rural_telehealth.py  scholarships.py  skillbridge.py  ssvf.py  stand_down_events.py  state_va.py  state_va_offices.py  sva_chapters.py  swords_to_plowshares.py  t2t_veterans_villages.py  team_rwb.py  tribal_veterans.py  two_one_one.py  united_way.py  (+14 more)
backend/data/: feeding_america_websites.json  food_bank_missing_websites.json  food_bank_website_enrichment.json  housing_missing_websites.json  housing_website_enrichment.json  legal_website_enrichment.json
backend/data/211/: AK.json  (+50 more)
backend/etl/: __init__.py  dedupe.py  enrich.py  geocode_locations.py  import_211.py  load_zip_codes.py  loader.py  models.py  normalize.py  pipeline.py
backend/jobs/: __init__.py  base.py  cleanup.py  discovery.py  embeddings.py  freshness.py  link_checker.py  refresh.py  scheduler.py
backend/llm/: __init__.py  client.py
backend/scripts/: apply_food_bank_enrichment.py  apply_legal_enrichment.py  backfill_eligibility_tags.py  backup_production.py  bulk_approve_reviews.py  check_links.py  crawl4ai_short_content.py  crawl4ai_verify.py  demo_crawl4ai.py  demo_tier34_crawl.py  enrich_food_bank_websites.py  enrich_food_resources.py  export_resources_excel.py  fetch_hud_vash_awards.py  fetch_hud_vash_multiyear.py  fetch_pha_contacts.py  fix_feeding_america_categories.py  fix_scope_data.py  fix_trust_scores.py  fix_uncategorized_resources.py  fix_va_source_tiers.py  import_discoveries.py  import_ssvf_providers.py  import_united_way.py  link_check_local.py  merge_food_resources.py  parallel_link_check.py  recheck_403s.py  recheck_short_content.py  review_soft_404s.py  scrape_lsc_contacts.py  scrape_lsc_sync.py  seed_discovered_benefits.py  seed_dmv_benefits.py  seed_dmv_food.py  seed_dmv_housing.py  seed_hubs.py  seed_national_food.py  seed_production.py  seed_resources.py  (+4 more)
backend/tests/: __init__.py  conftest.py  test_api.py  test_embedding.py  test_health.py  test_nearby_tags.py  test_tag_filtering.py  test_taxonomy.py
(+345 files in other folders)
